Re-style the login form to fix alignment issue with remember_me checkbox.

--- a/django/econsensus/publicweb/static/css/styles.css
+++ b/django/econsensus/publicweb/static/css/styles.css
@@ -1202,6 +1202,15 @@ ul.errorlist {
     width: 400px;
 }
 
+#short-form .checkbox input {
+	width: auto;
+}
+
+#short-form .checkbox label {
+    padding-top: 0;
+}
+
+
 #short-form.login .helptext {
     display: none;
 }
